Ensured Spatial and Field Query Segregation